{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 21,
  "lineage": "107dfd5b-6c4c-0d28-5eb2-ae0d82aed186",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "arm_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063132acbd3b0c9a5",
            "domain": "vpc",
            "id": "eipalloc-063132acbd3b0c9a5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-21-68.compute-1.amazonaws.com",
            "public_ip": "44.206.21.68",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "arm_server_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cc96665c243d56f",
            "arn": "arn:aws:ec2:us-east-1:902308669087:instance/i-02cc4552b9444ffc6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-02cc4552b9444ffc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0296951120fbc27a4",
            "private_dns": "ip-192-168-1-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:902308669087:key/265f934e-0fd2-437c-b93b-d679f69815a7",
                "throughput": 0,
                "volume_id": "vol-042cb3860d6b41ccb",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05217bce6eeb22baf",
            "tags": {
              "Name": "PrivateServer"
            },
            "tags_all": {
              "Name": "PrivateServer",
              "Project": "AdministracijaRacunarskihMreza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09ea103b52ce3c3cb"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.arm_ecs_cluster",
            "aws_kms_key.ebs_encryption_key",
            "aws_security_group.arm_security_group",
            "aws_subnet.arm_subnet_private",
            "aws_vpc.arm_vpc",
            "data.aws_ami.ecs_optimized_amazon_linux_ami",
            "data.aws_caller_identity.current",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_iam_policy_document.ebs_encryption_kms_key_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arm_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:internet-gateway/igw-03746be2663a28dfa",
            "id": "igw-03746be2663a28dfa",
            "owner_id": "902308669087",
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "vpc_id": "vpc-008672fe65d956c73"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "arm_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063132acbd3b0c9a5",
            "association_id": "eipassoc-038991e9312212e2d",
            "connectivity_type": "public",
            "id": "nat-0ccc31d169e9c2b73",
            "network_interface_id": "eni-0b1c62dec5b868c60",
            "private_ip": "192.168.1.50",
            "public_ip": "44.206.21.68",
            "subnet_id": "subnet-065c7859f1aeaaa2e",
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            }
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:route-table/rtb-033c048f4601e2438",
            "id": "rtb-033c048f4601e2438",
            "owner_id": "902308669087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ccc31d169e9c2b73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "timeouts": null,
            "vpc_id": "vpc-008672fe65d956c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:route-table/rtb-06ab4983dc174636a",
            "id": "rtb-06ab4983dc174636a",
            "owner_id": "902308669087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03746be2663a28dfa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "timeouts": null,
            "vpc_id": "vpc-008672fe65d956c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbbc06054663a106",
            "route_table_id": "rtb-033c048f4601e2438",
            "subnet_id": "subnet-05217bce6eeb22baf"
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_route_table.arm_private_rt",
            "aws_subnet.arm_subnet_private",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05643a25bb9ff3784",
            "route_table_id": "rtb-06ab4983dc174636a",
            "subnet_id": "subnet-065c7859f1aeaaa2e"
          },
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_route_table.arm_public_rt",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:security-group/sg-09ea103b52ce3c3cb",
            "description": "Security group for ARM EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ea103b52ce3c3cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic in security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "arm_security_group",
            "name_prefix": "",
            "owner_id": "902308669087",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "timeouts": null,
            "vpc_id": "vpc-008672fe65d956c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arm_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:subnet/subnet-05217bce6eeb22baf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05217bce6eeb22baf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902308669087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private",
              "Project": "AdministracijaRacunarskihMreza"
            },
            "vpc_id": "vpc-008672fe65d956c73"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:subnet/subnet-065c7859f1aeaaa2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065c7859f1aeaaa2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902308669087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public",
              "Project": "AdministracijaRacunarskihMreza"
            },
            "vpc_id": "vpc-008672fe65d956c73"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:vpc/vpc-008672fe65d956c73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/26",
            "default_network_acl_id": "acl-0184451d5f5ff7da6",
            "default_route_table_id": "rtb-0b733f98e407e0313",
            "default_security_group_id": "sg-09a023e02b9df0f14",
            "dhcp_options_id": "dopt-01afa91bb7abea722",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008672fe65d956c73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b733f98e407e0313",
            "owner_id": "902308669087",
            "tags": {
              "Name": "ArmVpc"
            },
            "tags_all": {
              "Name": "ArmVpc",
              "Project": "AdministracijaRacunarskihMreza"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}